--- a/css/styles.css
+++ b/css/styles.css
@@ -124,3 +124,4 @@ footer{text-align:center}
 .social{text-align:center}}@media only screen and (max-width: 480px){#lead-content h1{font-size:1.5em}
 #lead-content h2{font-size:1em}
 #lead-content a{font-size:0.9em;padding:5px 10px}}
+.seal{float: right}
