--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body.active{overflow:hidden;z-index:-1}
 .no-js #experience-timeline>div h4{font-size:1.2em;font-weight:300;color:#7e8890;margin:0 0 15px 0}
 .no-js #experience-timeline>div p{color:#74808a;font-size:0.9em;margin:0}
 .no-js #experience-timeline:before,.no-js #experience-timeline:after{content:none}@keyframes dropHeader{0%{transform:translateY(-100%)}100%{transform:translateY(0)}}
-header{position:absolute;top:0;left:0;right:0;text-align:center;z-index:10;animation-name:dropHeader;animation-iteration-count:1;animation-timing-function:ease;animation-duration:0.75s}
+header{position:absolute;top:0;left:0;right:0;text-align:center;z-index:50;;animation-name:dropHeader;animation-iteration-count:1;animation-timing-function:ease;animation-duration:0.75s;}
 header ul{display:inline-block;background:#fff;text-align:center;padding:10px;margin:0;border-bottom-right-radius:4px;border-bottom-left-radius:4px}
 header li{display:inline-block}
 header a{display:block;color:#3498db;padding:10px}
@@ -77,6 +77,7 @@ footer{padding:50px 0}
 .project-info{position:absolute;top:50%;transform:translateY(-50%);margin-left:300px;padding:15px}
 .project-info h3{font-size:1.5em;font-weight:300;color:#374054;margin:0 0 15px 0}
 .project-info p{color:#74808a;margin:0 0 15px 0;font-size:0.9em}
+.project-info ul{margin:0 0 15px 0;font-size:0.9em;padding:0.15px}
 .no-image .project-info{position:relative;margin:0;padding:30px 15px;transform:none}
 #more-projects{display:none}
 #skills{padding:50px 15px;text-align:center}
